Test Owner module

--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -8,6 +8,7 @@ casper-types = "1.4.6"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
 delegate = "0.6.2"
+speculate = "0.1.2"
 
 [[bin]]
 name = "reputation_contract"
