--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           profile: minimal
           components: rustfmt, clippy
-      - run: sudo apt update && sudo apt install -y build-essential
+      - uses: Swatinem/rust-cache@v1
       - run: make prepare
       - run: make check-lint
       - run: make test
