--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 casper-types = "1.4.6"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
+casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
+delegate = "0.6.2"
 
 [[bin]]
 name = "reputation_contract"
