--- a/dao-macros/tests/templates/contract.template
+++ b/dao-macros/tests/templates/contract.template
@@ -193,7 +193,14 @@ mod contract {
             self.env.as_account(account);
             self
         }
-        pub fn event<T: casper_types::bytesrepr::FromBytes>(&self, index: u32) -> T {
+        pub fn event<T: casper_types::bytesrepr::FromBytes>(&self, index: i32) -> T {
+            let length: u32 = self.env.get_value(self.package_hash, "events_length");
+            let index: u32 = if index.is_negative() {
+                length - index.wrapping_abs() as u32
+            } else {
+                index as u32
+            };
+            
             let raw_event: std::option::Option<casper_types::bytesrepr::Bytes> =
                 self.env.get_dict_value(self.package_hash, "events", index);
             let raw_event = raw_event.unwrap();
