--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2018"
 casper-types = "1.4.6"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
+delegate = "0.6.2"
+
+[dev-dependencies]
+speculate = "0.1.2"
+test-case = "2.0.2"
 
 [[bin]]
 name = "reputation_contract"
@@ -26,6 +31,13 @@ test = false
 [[bin]]
 name = "repo_voter_contract"
 path = "bin/repo_voter_contract.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
+name = "admin_contract"
+path = "bin/admin_contract.rs"
 bench = false
 doctest = false
 test = false
