--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -51,6 +51,13 @@ doctest = false
 test = false
 
 [[bin]]
+name = "kyc_voter_contract"
+path = "bin/kyc_voter_contract.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
 name = "admin_contract"
 path = "bin/admin_contract.rs"
 bench = false
