--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -78,6 +78,13 @@ bench = false
 doctest = false
 test = false
 
+[[bin]]
+name = "pick_bid"
+path = "bin/pick_bid.rs"
+bench = false
+doctest = false
+test = false
+
 [features]
 default = [ "test-support" ]
 test-support = [ "casper-dao-utils/test-support", "casper-dao-modules/test-support" ]
