--- a/.github/workflows/ci-casper-js-client.yml
+++ b/.github/workflows/ci-casper-js-client.yml
@@ -7,11 +7,14 @@ on:
       - master
     paths-ignore:
       - "**.md"
+      - "docs/**"      
+
   pull_request:
     branches:
       - master
     paths-ignore:
       - "**.md"
+      - "docs/**"
 
 env:
   NODE_ENV: ci
