--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -7,6 +7,7 @@ on:
       - develop
     paths-ignore:
       - "**.md"
+      - "docs/**"
 
   pull_request:
     branches:
@@ -15,6 +16,7 @@ on:
       - feature/*
     paths-ignore:
       - "**.md"
+      - "docs/**"
 
 jobs:
   build:
