--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 casper-types = "1.4.6"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
-casper-dao-erc20 = { path = "../dao-erc20", default-features = false }
+casper-dao-erc20 = { path = "../dao-erc20", default-features = false, features = [ "skip-events" ]}
 casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
 delegate = "0.6.2"
 
