Split DaoNftToken into VaToken and KycToken

--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -52,8 +52,15 @@ doctest = false
 test = false
 
 [[bin]]
-name = "dao_owned_nft_contract"
-path = "bin/dao_owned_nft_contract.rs"
+name = "va_owned_nft_contract"
+path = "bin/va_owned_nft_contract.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
+name = "kyc_owned_nft_contract"
+path = "bin/kyc_owned_nft_contract.rs"
 bench = false
 doctest = false
 test = false
