--- a/dao-utils/Cargo.toml
+++ b/dao-utils/Cargo.toml
@@ -13,6 +13,7 @@ casper-engine-test-support = { version = "2.0.3", features = ["test-support"], o
 casper-execution-engine = { version = "1.4.4", optional = true }
 hex = "0.4.3"
 blake2 = { version = "0.9.0", default-features = false }
+num-traits = "0.2.15"
 
 [[bin]]
 name = "getter_proxy"
