Reputation Token features definition. WIP.

--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -22,6 +22,11 @@ test-case = "2.0.2"
 #required-features = ["test-support"]
 
 [[test]]
+name = "test_gherkin_reputation_token"
+harness = false  # allows Cucumber to print output instead of libtest
+required-features = ["test-support"]
+
+[[test]]
 name = "test_balance"
 required-features = ["test-support"]
 
