--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -16,19 +16,19 @@ tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
 speculate = "0.1.2"
 test-case = "2.0.2"
 
-#[[test]]
-#name = "test_gherkin_bid_escrow"
-#harness = false  # allows Cucumber to print output instead of libtest
-#required-features = ["test-support"]
-
 [[test]]
-name = "test_gherkin_reputation_token"
+name = "test_gherkin_bid_escrow"
 harness = false  # allows Cucumber to print output instead of libtest
 required-features = ["test-support"]
 
-[[test]]
-name = "test_balance"
-required-features = ["test-support"]
+#[[test]]
+#name = "test_gherkin_reputation_token"
+#harness = false  # allows Cucumber to print output instead of libtest
+#required-features = ["test-support"]
+
+#[[test]]
+#name = "test_balance"
+#required-features = ["test-support"]
 
 [[bin]]
 name = "reputation_contract"
