--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -123,6 +123,14 @@ bench = false
 doctest = false
 test = false
 
+
+[[bin]]
+name = "post_job_offer"
+path = "bin/post_job_offer.rs"
+bench = false
+doctest = false
+test = false
+
 [features]
 default = [ "test-support" ]
 test-support = [ "casper-dao-utils/test-support", "casper-dao-modules/test-support" ]
