--- a/.github/workflows/ci-casper-js-client.yml
+++ b/.github/workflows/ci-casper-js-client.yml
@@ -31,7 +31,7 @@ env:
 jobs:
   run-e2e:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: buildjet-8vcpu-ubuntu-2204 # We use buildjet instead GH's free ubuntu-latest for faster builds
     # Service containers to run with `runner-job`
     services:
       # Label used to access the service container
