--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: buildjet-8vcpu-ubuntu-2204 # We use buildjet instead GH's free ubuntu-latest for faster builds
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
