--- a/dao-utils/Cargo.toml
+++ b/dao-utils/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-casper-contract = { version = "1.4.3", default-features = false }
+casper-contract = { version = "1.4.3", default-features = false, features = ["test-support"] }
 casper-types = "1.5.0"
 base64 = "0.13.0"
 lazy_static = "1.4.0"
