--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -31,6 +31,11 @@ name = "test_variables"
 harness = false  # allows Cucumber to print output instead of libtest
 required-features = ["test-support"]
 
+[[test]]
+name = "test_kyc"
+harness = false  # allows Cucumber to print output instead of libtest
+required-features = ["test-support"]
+
 #[[test]]
 #name = "test_gherkin_reputation_token"
 #harness = false  # allows Cucumber to print output instead of libtest
