--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -15,6 +15,7 @@ cucumber = "0.15.0"
 speculate = "0.1.2"
 test-case = "2.0.2"
 futures = "0.3.5"
+derive_more = "0.99.17"
 
 [[test]]
 name = "test_bid_escrow"
