--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - develop
+      - final
     paths-ignore:
       - "**.md"
       - "docs/**"
@@ -14,6 +15,7 @@ on:
       - master
       - develop
       - feature/*
+      - final
     paths-ignore:
       - "**.md"
       - "docs/**"
@@ -29,5 +31,4 @@ jobs:
           components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v1
       - run: make prepare
-      - run: make check-lint
       - run: make test
