add rate provider bin

--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -163,6 +163,13 @@ bench = false
 doctest = false
 test = false
 
+[[bin]]
+name = "cspr_rate_provider_contract"
+path = "bin/cspr_rate_provider.rs"
+bench = false
+doctest = false
+test = false
+
 [features]
 default = [ "test-support" ]
 test-support = [ "casper-dao-utils/test-support", "casper-dao-modules/test-support" ]
