--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -157,6 +157,13 @@ doctest = false
 test = false
 
 [[bin]]
+name = "submit_job_proof_during_grace_period"
+path = "bin/submit_job_proof_during_grace_period.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
 name = "post_job_offer"
 path = "bin/post_job_offer.rs"
 bench = false
