--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -164,6 +164,13 @@ doctest = false
 test = false
 
 [[bin]]
+name = "submit_onboarding_request"
+path = "bin/submit_onboarding_request.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
 name = "post_job_offer"
 path = "bin/post_job_offer.rs"
 bench = false
@@ -180,6 +187,13 @@ test = false
 [[bin]]
 name = "dao_ids_contract"
 path = "bin/dao_ids.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
+name = "onboarding_request_contract"
+path = "bin/onboarding_request.rs"
 bench = false
 doctest = false
 test = false
