--- a/dao-contracts-schemas/Cargo.toml
+++ b/dao-contracts-schemas/Cargo.toml
@@ -8,6 +8,7 @@ casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-contracts = { path = "../dao-contracts", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
+casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
 
 [[bin]]
 name = "update-schemas"
