--- a/dao-contracts-schemas/Cargo.toml
+++ b/dao-contracts-schemas/Cargo.toml
@@ -9,6 +9,8 @@ casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-contracts = { path = "../dao-contracts", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
 casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
+serde_json = "1.0"
+convert_case = "0.6"
 
 [[bin]]
 name = "update-schemas"
