--- a/dao-utils/Cargo.toml
+++ b/dao-utils/Cargo.toml
@@ -14,6 +14,7 @@ casper-execution-engine = { version = "2.0.1", optional = true }
 hex = "0.4.3"
 blake2 = { version = "0.9.0", default-features = false }
 num-traits = "0.2.15"
+serde = { version = "1.0", features = ["derive"] }
 
 [[bin]]
 name = "getter_proxy"
