--- a/dao-modules/Cargo.toml
+++ b/dao-modules/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
+num-traits = "0.2.15"
 
 [features]
 default = [ "test-support" ]
