Use casper_event_standard for events.

--- a/dao-erc20/Cargo.toml
+++ b/dao-erc20/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
+casper-event-standard = { workspace = true }
 
 [[bin]]
 name = "erc_20"
