--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ members = [
     "dao-contracts-schemas"
 ]
 
+[workspace.dependencies]
+casper-event-standard = { git = "https://github.com/make-software/casper-event-standard", branch = "release/0.1.1" }
+
 [profile.release]
 codegen-units = 1
 lto = true
