--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -9,6 +9,7 @@ casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
 casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
 delegate = "0.6.2"
+casper-event-standard = { workspace = true }
 
 [dev-dependencies]
 cucumber = "0.15.0"
