--- a/dao-erc721/Cargo.toml
+++ b/dao-erc721/Cargo.toml
@@ -3,12 +3,12 @@ name = "casper-dao-erc721"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 delegate = "0.6.2"
+casper-event-standard = { workspace = true }
+
 [dev-dependencies]
 speculate = "0.1.2"
 test-case = "2.0.2"
