--- a/dao-modules/Cargo.toml
+++ b/dao-modules/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 num-traits = "0.2.15"
+casper-event-standard = { workspace = true }
 
 [features]
 default = [ "test-support" ]
