--- a/dao-contracts-schemas/Cargo.toml
+++ b/dao-contracts-schemas/Cargo.toml
@@ -9,6 +9,7 @@ casper-dao-utils = { path = "../dao-utils", default-features = false, features =
 casper-dao-contracts = { path = "../dao-contracts", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
 casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
+serde = "1.0"
 serde_json = "1.0"
 convert_case = "0.6"
 
