--- a/dao-erc721/Cargo.toml
+++ b/dao-erc721/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
-delegate = "0.6.2"
+casper-types = { workspace = true }
 casper-event-standard = { workspace = true }
+delegate = "0.6.2"
 
 [dev-dependencies]
 speculate = "0.1.2"
