--- a/dao-modules/Cargo.toml
+++ b/dao-modules/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
-num-traits = "0.2.15"
 casper-event-standard = { workspace = true }
+casper-types = { workspace = true }
+num-traits = "0.2.15"
 
 [features]
 default = [ "test-support" ]
