--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-casper-types = "1.5.0"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
 casper-dao-erc721 = { path = "../dao-erc721", default-features = false }
-delegate = "0.6.2"
+casper-types = { workspace = true }
 casper-event-standard = { workspace = true }
+delegate = "0.6.2"
 
 [dev-dependencies]
 cucumber = "0.15.0"
