--- a/dao-utils/Cargo.toml
+++ b/dao-utils/Cargo.toml
@@ -4,16 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-casper-contract = { version = "1.4.3", default-features = false, features = ["test-support"] }
-casper-types = "1.5.0"
-base64 = "0.13.0"
-lazy_static = "1.4.0"
+casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
+casper-types = { workspace = true }
+casper-event-standard = { workspace = true }
 casper-dao-macros = { path = "../dao-macros" }
-casper-engine-test-support = { version = "2.2.0", features = ["test-support"], optional = true }
-casper-execution-engine = { version = "2.0.1", optional = true }
+casper-engine-test-support = { version = "3.1.0", features = ["test-support"], optional = true }
+casper-execution-engine = { version = "3.1.0", optional = true }
+lazy_static = "1.4.0"
 hex = "0.4.3"
 blake2 = { version = "0.9.0", default-features = false }
-casper-event-standard = { workspace = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 [[bin]]
