--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ exclude = [
 ]
 
 [workspace.dependencies]
-odra = { git = "https://github.com/odradev/odra.git", branch = "release/0.4.0", default-features = false }
-odra-modules = { git = "https://github.com/odradev/odra.git", branch = "release/0.4.0", default-features = false }
+odra = { path = "../odra/odra/core", default-features = false }
+odra-modules = { path = "../odra/odra/modules", default-features = false }
 
 [profile.release]
 codegen-units = 1
