--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -33,6 +33,7 @@ jobs:
           components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v1
       - uses: extractions/setup-just@v1
+      - run: sudo apt install -y wabt
       - run: just prepare
       - run: just check-lint
       - run: just test
